# aruco

./: .gitignore  Makefile  README.md  pyproject.toml
src/aruco/: __init__.py  constants.py  detector.py  main.py  marker.py  plot.py
